--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".LinerLayoutActivity" />
         <activity android:name=".TableLayoutActivity" />
-        <activity android:name=".RelativeLayoutActivity"></activity>
+        <activity android:name=".RelativeLayoutActivity" />
+        <activity android:name=".GridLayoutActivity" />
+        <activity android:name=".ConstraintLayoutActivity"></activity>
     </application>
 
 </manifest>
